# gspro-microservice

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
gateway/: Dockerfile  Makefile  pyproject.toml
gateway/app/: main.py
gateway/app/aggregators/course/: enrich_courses_with_cover.py
gateway/app/api/: ws_auth.py
gateway/app/api/dependencies/: auth.py
gateway/app/api/routes/: __init__.py  admin.py  auth.py  auth_router.py  category_router.py  course.py  course_router.py  module_router.py  profile_router.py  profiles_router.py  user_router.py  users.py  users_router.py
gateway/app/clients/: course_client.py  user_client.py
gateway/app/clients/chat/: __init__.py  chat_client.py  chat_message.py  chat_message_client.py
gateway/app/clients/course/: __init__.py  (+9 more)
gateway/app/schemas/: auth.py  course.py
gateway/app/utils/: file_validation.py  image_validation.py  validate_voice.py
gateway/app/ws/: connection_manager.py
media_service/: Dockerfile  Makefile  main.py  pyproject.toml
shared/: pyproject.toml
shared/protos/chat/: chat.proto  chat_message.proto
shared/protos/course/: admin_category.proto  admin_course.proto  admin_lesson.proto  admin_module.proto  category.proto  course.proto  lesson.proto  media.proto  module.proto
shared/protos/favorites/: course_favorites.proto
shared/protos/media/: media.proto
shared/protos/progress/: lesson_progress.proto
shared/protos/reviews/: app_feedback.proto  course_reviews.proto
shared/protos/subscription/: course_access.proto  purchase_request.proto
shared/protos/user/: profile.proto  user.proto  user_category.proto  user_certificate.proto  user_education.proto  user_experience.proto
user_service/: Dockerfile  Makefile  alembic.ini  cli.py  main.py  pyproject.toml
user_service/app/core/: database.py
user_service/migrations/: env.py
user_service/migrations/versions/: 0201931fb371_init_db.py  03aea1843915_add_table_user_categories.py  19f3395b7f2e_init.py  408551da4bbe_add_date_of_birth_to_user_profiles.py  5ec5a7942a15_sync_models.py  658d93baf47e_move_updated_at_to_base_mixin.py  89cd0994c37e_add_new_tables_education_experience_.py  ae5baa1f354e_add_users_and_auth_accounts.py  b370503641a4_add_google_auth_fields.py  b600ea16d9ae_feat_user_image_table.py  b88860b26a03_add_password_reset_codes.py  bc709a27698a_fix_field_category_id.py  d99d3bfbb2b9_add_user_profile.py  dd0059a09dcc_move_updated_at_to_auth_account.py  f42eeed77b86_add_new_field_updated_at.py  fd4119bcfb64_fix_user_profile_pk_filed.py
user_service/src/core/: database.py
(+601 files in other folders)
