[tool.poetry]
package-mode = false
name = "gateway"
version = "0.1.0"
description = ""
authors = ["TumantaevBaiaman <tumantaev.baiaman.space@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.119.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
python-dotenv = "^1.1.1"
pydantic = {extras = ["email"], version = "^2.12.4"}
grpcio = "^1.75.1"
protobuf = "^6.33.0"
pydantic-settings = "^2.11.0"
pyjwt = "^2.10.1"
pillow = "^12.0.0"
aiohttp = "^3.13.2"
python-multipart = "^0.0.21"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

