[tool.poetry]
package-mode = false
name = "media-service"
version = "0.1.0"
description = ""
authors = ["TumantaevBaiaman <tumantaev.baiaman.space@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"
grpcio-reflection = "^1.76.0"
grpcio-health-checking = "^1.76.0"
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
beanie = "^2.0.0"
motor = "^3.7.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
