[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared proto files and utils for microservices"
authors = ["TumantaevBaiaman <tumantaev.baiaman.space@gmail.com>"]
readme = "README.md"
packages = [
    { include = "shared" }
]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
