[tool.poetry]
package-mode = false
name = "user-service"
version = "0.1.0"
description = ""
authors = ["TumantaevBaiaman <tumantaev.baiaman.space@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.75.1"
grpcio-tools = "^1.75.1"
fastapi = "^0.119.0"
uvicorn = "^0.37.0"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.0"
pydantic-settings = "^2.11.0"
pydantic = {extras = ["email"], version = "^2.12.4"}
asyncpg = "^0.30.0"
passlib = "^1.7.4"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
